fixed private checkbox visibility not saving fixed layout issue with checkboxes on issue pages

--- a/src/BugNET_WAP/Content/Site.css
+++ b/src/BugNET_WAP/Content/Site.css
@@ -65,6 +65,12 @@ input[type="select"] {
 
 .checkbox input[type="checkbox"] {
     margin-left: 0;
+
+}
+.checkbox{
+    height: 34px;
+    line-height: 1.42857143;
+    display:block;
 }
 
 .issueListOptionsContainer {
